# lingmo-system-monitor

./: AUTHORS  ChangeLog.pre-git  HACKING  lingmo-system-monitor.doap  meson.build
build-aux/flatpak/: org.lingmo.SystemMonitor.Devel.json
data/: interface.ui  lingmo-system-monitor-kde.desktop.in.in  meson.build  org.lingmo.SystemMonitor.appdata.xml.in.in  org.lingmo.SystemMonitor.desktop.in.in  org.lingmo.lingmo-system-monitor.policy.in.in
debian/: changelog  control  copyright  lingmo-system-monitor.sgml  rules  watch
debian/upstream/: metadata
help/: ChangeLog  meson.build
help/C/: index.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ko/: ko.po
help/pl/: pl.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
po/: ChangeLog  POTFILES.in  POTFILES.skip  ab.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  he.po  (+59 more)
src/: application.cpp  defaulttable.h  gsm-graph.c  gsm-graph.h  gsm.gresource.xml  gsm_lingmosu.cpp  gsm_lingmosu.h  interface.cpp  load-graph.cpp  lsof.cpp  main.cpp  memmaps.cpp  meson.build  openfiles.cpp  org.lingmo.lingmo-system-monitor.gschema.xml.in  prefsdialog.cpp  procdialogs.cpp  procproperties.cpp  proctable.cpp  setaffinity.cpp  settings-keys.h  util.cpp
src/legacy/: gsm_color_button.c  gsm_color_button.h
tools/: gtk.cfg
